Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.5.0 - Current
  Matt Brookings
  - Updated vopenldap module to enable auth-logging by default
  - Updated vdominfo to say "No domains" when there are no domains configured
    under vpopmail
  - Modified some password strength return string generation to be a bit more
    clear
  - Changed all floats to doubles in password strength variables to
    avoid having to compile with -std=c99
  - Updated vadddomain to check password strength before adding domain
  - Updated default password policy
  - Updated vadduser call and vadduser binary to enforce password strength
  - Added configurable password strength enforcement
  - Updated vusaged to call vauth_open
  - Fixed OpenLDAP module reporting itself as "ldap" rather than "openldap"
  - Updated all modules to export module feature IP_ALIAS_DOMAINS
  - Updated all module configure scripts to have --enable-ip-alias-domains
  - Updated main source to look for module exported feature IP_ALIAS_DOMAINS
  - Updated main source configure script to disallow --enable-ip-alias-domains
  - Added initial OpenLDAP module entry to replace the "ldap" module
  - Updated some vpopmail daemon formatting calls to check buffer bounds
  - Updated vusage daemon to store cached copy of vpopmail user authentication
    structure
  - Updated cdb module auth-logging feature to be on by default
  - Updated vusage daemon to use module API to get last authentication time
  - Added authentication module feature API which provides optional module
    feature information to callers.
  - Updated old maildirsize creation function to set proper uid/gid on target
  - Updated authentication modules to remove maildirsize file when a quota is set to NOQUOTA
  - Fixed a bug in client functions that tried to evaluate a NULL string
  - Fixed several bugs in vusaged relating to duplicate items in the work queue