@@ -119,5 +119,12 @@ Polling:
 
    Day age = 5;
 
+   /*
+	  Block size of storage device where mail is stored
+	  If this is not set, defaults to "1".
+   */
+
+   Block size = 4096;
+
 Storage:
    Filename = ./vusaged.vdb;
